--- a/packages/amis-ui/scss/components/form/_textarea.scss
+++ b/packages/amis-ui/scss/components/form/_textarea.scss
@@ -16,6 +16,7 @@
 
     border: 1px solid var(--Form-input-borderColor);
     border-radius: var(--Form-input-borderRadius);
+    color: var(--colors-neutral-text-2);
     background: var(--Form-input-bg);
     padding: var(--input-textarea-paddingTop) var(--input-textarea-paddingRight)
       var(--input-textarea-paddingBottom) var(--input-textarea-paddingLeft);
