feat: 修复下拉样式被遮挡问题

--- a/packages/amis-ui/scss/components/_condition-builder.scss
+++ b/packages/amis-ui/scss/components/_condition-builder.scss
@@ -302,7 +302,7 @@
         padding: 10px;
         margin: -10px 0px;
         background: $white;
-        z-index: 2;
+        z-index: $zindex-dropdown;
       }
       > .#{$ns}CBGroupOrItem-dragbar {
         left: px2rem(-5px);
