feat: link支持最大显示行数及tooltip提示

--- a/packages/amis-ui/scss/components/_link.scss
+++ b/packages/amis-ui/scss/components/_link.scss
@@ -20,3 +20,11 @@
     vertical-align: text-top;
   }
 }
+
+.max-line {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
