fix:Wizard组件中角标显示异常 #5019

--- a/packages/amis-ui/scss/components/_wizard.scss
+++ b/packages/amis-ui/scss/components/_wizard.scss
@@ -65,6 +65,12 @@
       }
     }
 
+    .#{$ns}Badge-Button {
+      width: auto;
+      height: auto;
+      border: none;
+    }
+
     ul li.active {
       color: var(--info);
     }
