fix:Spinner组件delay属性不生效 #9093

--- a/packages/amis-ui/scss/components/_spinner.scss
+++ b/packages/amis-ui/scss/components/_spinner.scss
@@ -30,6 +30,10 @@
     opacity: 1;
   }
 
+  &.ing {
+    opacity: 0;
+  }
+
   .#{$ns}Spinner-icon {
     width: var(--Spinner-width);
     height: var(--Spinner-height);
