feat: 图片集放大显示模式优化

--- a/packages/amis-ui/scss/components/_image-gallery.scss
+++ b/packages/amis-ui/scss/components/_image-gallery.scss
@@ -442,19 +442,18 @@
     }
   }
 
+  &-range {
+    width: px2rem(200px);
+  }
+
   &-pagination {
     flex: 1;
     text-align: right;
 
     > ul {
-      width: px2rem(102px);
 
       li {
         color: var(--white);
-        
-        span {
-          min-width: unset;
-        }
 
         svg {
           color: var(--white);
