feat: crud 的 filterable 支持 searchable (#9229)

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -800,6 +800,11 @@
         }
       }
     }
+
+    .#{$ns}SearchBox {
+      margin-left: var(--gap-xs);
+      margin-top: var(--gap-xs);
+    }
   }
 
   &-itemActions-wrap {
