fix: 取消buttongroupselect默认值展示条件限制 & 配置badge情况下按钮平铺无法自适应

--- a/packages/amis-ui/scss/components/_button-group.scss
+++ b/packages/amis-ui/scss/components/_button-group.scss
@@ -149,8 +149,12 @@
   display: flex;
 
   .#{$ns}Button,
-  .#{$ns}ButtonGroup {
+  .#{$ns}ButtonGroup,
+  .#{$ns}Badge {
     flex-grow: 1;
     text-align: center;
+    .#{$ns}Button {
+      width: 100%;
+    }
   }
 }
