--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -54,6 +54,7 @@
 @import './style-control/size';
 @import './style-control/style-common';
 @import './style-control/theme-css-code';
+@import './style-control/flex-layout';
 
 /* 组件样式 */
 @import './components/button';
