style: 优化input-tag、input-year-range、list-select等组件样式 (#9477)
* style: 优化tag组件样式

* 组件样式优化

* 修复编辑器组件提示溢出问题

* 优化年份\季度\月份范围选择器组件样式

* 更新快照

* 更新快照

---------

Co-authored-by: qinhaoyan <30946345+qinhaoyan@users.noreply.github.com>

--- a/packages/amis-ui/scss/components/form/_select.scss
+++ b/packages/amis-ui/scss/components/form/_select.scss
@@ -595,6 +595,11 @@
   // PopOver 上已经配置了，这个要是配置就会覆盖，所以先干掉好了
   // z-index: 10;
 }
+.#{$ns}InputGroup:hover {
+  .#{$ns}Select-popover {
+    border-color: var(--Form-select-outer-borderColor) !important;
+  }
+}
 
 .#{$ns}SelectControl {
   &:not(.is-inline) > .#{$ns}Select {
@@ -607,8 +612,6 @@
   }
 
   .#{$ns}TransferDropDown-popover {
-    border: none;
-
     .#{$ns}Tree-list {
       .#{$ns}Tree-item {
         .#{$ns}Tree-itemLabel,
