feat: loading根据父级背景颜色自动适配颜色

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -3308,6 +3308,7 @@
   --Spinner-width: var(--spinner-size-size);
   --Spinner-color: var(--spinner-base-color);
   --Spinner-color--disabled: rgba(0, 0, 0, 0.65);
+  --loading-dark-bg-color: var(--colors-neutral-text-11);
 
   // Image
   --image-image-normal-paddingTop: var(--sizes-size-3);
