--- a/packages/amis-ui/scss/themes/dark.scss
+++ b/packages/amis-ui/scss/themes/dark.scss
@@ -5,6 +5,7 @@
 
 :root,
 .AMISCSSWrapper {
+  --loading-dark-bg-color: var(--colors-neutral-fill-2);
   --switch-text-on-color: var(--colors-neutral-text-2);
   --switch-text-off-color: var(--colors-neutral-text-2);
   --switch-default-on-slider-color: var(--colors-neutral-fill-2);
