--- a/packages/amis-ui/scss/components/form/_excel.scss
+++ b/packages/amis-ui/scss/components/form/_excel.scss
@@ -30,6 +30,16 @@
     color: #bdbdbd;
     outline: none;
     transition: border 0.24s ease-in-out;
+    position: relative;
+    > input {
+      display: block !important;
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      opacity: 0;
+    }
   }
 
   &-dropzone:focus {
