style: select 下拉框最小宽度设置成 120px 优化 buttonGroupSelect 禁用选中状态样式

--- a/packages/amis-ui/scss/components/_button-group.scss
+++ b/packages/amis-ui/scss/components/_button-group.scss
@@ -50,6 +50,11 @@
   }
   &-button--active {
     z-index: 1;
+
+    &.is-disabled {
+      color: var(--text-color);
+      border: var(--borderWidth) solid var(--borderColor);
+    }
   }
 }
 
