--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -142,3 +142,4 @@
 @import '../components/debug';
 @import '../components/menu';
 @import '../components/overflow-tpl';
+@import '../components/pdf_viewer';
