Revert "Revert "feat: 支持PDF预览" (#9694)"
This reverts commit eccd5c7ea550dc83fad84c116dde29823c9269d8.

--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -142,5 +142,6 @@
 @import '../components/debug';
 @import '../components/menu';
 @import '../components/overflow-tpl';
+@import '../components/pdf_viewer';
 
 @import '../components/print';
