feat: autoFill api 模式也支持 initAutoFill 配置 Close: #9631 #9716 #9721

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -744,7 +744,7 @@
     min-width: px2rem(320px);
     max-width: px2rem(640px);
 
-    .#{$ns}Panel {
+    > .#{$ns}Panel {
       margin: 0;
     }
   }
