--- a/packages/amis-ui/scss/components/_pdf_viewer.scss
+++ b/packages/amis-ui/scss/components/_pdf_viewer.scss
@@ -1,7 +1,8 @@
 .#{$ns}PdfViewer {
   position: relative;
+  width: 100%;
+  min-width: 300px;
   height: 100%;
-  min-height: 500px;
   display: flex;
   justify-content: center;
   padding: 50px 0;
@@ -14,6 +15,7 @@
   }
 
   &-Loading {
+    width: 100%;
     text-align: center;
   }
 
