--- a/packages/amis-ui/scss/_thirds.scss
+++ b/packages/amis-ui/scss/_thirds.scss
@@ -4,5 +4,6 @@
 @import '../../../node_modules/tinymce/skins/ui/oxide/skin';
 @import '../../../node_modules/video-react/dist/video-react';
 @import '../../../node_modules/cropperjs/dist/cropper';
+@import '../../../node_modules/office-viewer/dist/office';
 
 @import './components/react-datetime';
