fix: 修复 InputTable 编辑树形结构数据的问题 Close: #9379

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -643,6 +643,11 @@
       > .#{$ns}Spinner {
         vertical-align: middle;
       }
+
+      > [data-role='form-item'] {
+        display: inline-block;
+        min-width: px2rem(160px);
+      }
     }
   }
 
