style: 优化 tooltip 中的代码块展示

--- a/packages/amis-editor-core/scss/control/_expression-formula-control.scss
+++ b/packages/amis-editor-core/scss/control/_expression-formula-control.scss
@@ -38,6 +38,10 @@
 }
 .btn-configured-tooltip {
   font-size: 12px;
-  min-width: 320px;
-  min-height: 320px;
+  width: 200px;
+  min-height: 40px;
+
+  .CodeMirror {
+    height: auto;
+  }
 }
