feat: form-row-dnd

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1187,7 +1187,7 @@
 
 [data-editor-id].ae-is-draging,
 .ae-is-draging {
-  display: none !important;
+  opacity: 0.6;
 }
 
 [data-editor-id][data-visible='false'] {
@@ -1517,6 +1517,34 @@ div.ae-DragImage {
     display: block;
     white-space: nowrap;
     box-shadow: 0 -2px 5px rgba(255, 255, 255, 0.5);
+  }
+}
+
+.ae-PushHighlight-top,
+.ae-PushHighlight-bottom {
+  position: absolute;
+  &::after {
+    content: '';
+    left: 0;
+    right: 0;
+    display: block;
+    background: $Editor-hlbox--onActiveConfig-bg;
+    position: absolute;
+    height: 2px;
+  }
+}
+
+.ae-PushHighlight-left,
+.ae-PushHighlight-right {
+  position: absolute;
+  &::after {
+    content: '';
+    top: 0;
+    bottom: 0;
+    display: block;
+    background: $Editor-hlbox--onActiveConfig-bg;
+    position: absolute;
+    width: 2px;
   }
 }
 
