--- a/packages/amis-ui/scss/components/form/_icon-select.scss
+++ b/packages/amis-ui/scss/components/form/_icon-select.scss
@@ -41,6 +41,8 @@
       }
 
       &-main {
+        min-width: 0;
+        min-height: 0;
         flex: 1;
         overflow: auto;
       }
@@ -91,6 +93,8 @@
       }
 
       &-id {
+        min-width: 0;
+        min-height: 0;
         flex: 1;
         white-space: nowrap;
         overflow: hidden;
@@ -213,6 +217,8 @@
       &-info {
         margin-left: var(--IconSelect-base-margin);
         overflow: hidden;
+        min-width: 0;
+        min-height: 0;
         flex: 1;
 
         > p {
