--- a/packages/amis-ui/scss/components/_cascader.scss
+++ b/packages/amis-ui/scss/components/_cascader.scss
@@ -11,6 +11,8 @@
 }
 .#{$ns}Cascader-tab {
   flex: 1;
+  min-width: 0;
+  min-height: 0;
   width: calc((100vw - 20px) / 3);
   height: px2rem(260px);
   overflow-y: auto;
@@ -77,6 +79,8 @@
     }
     &--text {
       flex: 1;
+      min-width: 0;
+      min-height: 0;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -89,6 +93,8 @@
 
     &-arrow {
       flex: 1;
+      min-width: 0;
+      min-height: 0;
       text-align: right;
       padding-right: px2rem(6px);
       > svg {
