--- a/packages/amis-ui/scss/components/form/_combo.scss
+++ b/packages/amis-ui/scss/components/form/_combo.scss
@@ -341,6 +341,8 @@
   &.is-mobile {
     .#{$ns}Form-item {
       .#{$ns}Form-rowInner {
+        min-width: 0;
+        min-height: 0;
         flex: 1;
       }
     }
